--- a/css/styleMediaQueries.css
+++ b/css/styleMediaQueries.css
@@ -2391,7 +2391,8 @@
           "grid-bdd grid-sql";
       }
     .carreCompetences {
-        background-color: #8c322c;
+        /* background-color: #8c322c; */
+        background-color: #762e33;
         /* width: 150px;
         height: 150px;
         padding: 15px; */
@@ -2405,6 +2406,7 @@
         position: relative;
         top: 27px;
         opacity: 0.92;
+        filter: drop-shadow(1px 0px 2px black);
     }
     .exeptionJs {
         Width: 62px;
@@ -2414,10 +2416,14 @@
         margin-block-start: 1.8em;
         margin-block-end: 0em;
 
-        color: #171821;
+        /* color: #171821; */
+        color: var(--secondaryColor);
 
-        text-shadow: 0px 0px #00000000;
+        font-size: 1.0em;
+
+        text-shadow: 1px 1px #000000;
     }
+
 
 
     body {
