--- a/css/styleMediaQueries2k.css
+++ b/css/styleMediaQueries2k.css
@@ -17,6 +17,10 @@
         bottom: 100px;
     }
 
+    .textCompetences {
+        font-size: 1.5em;
+    }
+
     #dlCv {
         font-size: 0.62em;
         background-color: var(--secondaryColorMat);
